--- a/pizzapicker/build.gradle
+++ b/pizzapicker/build.gradle
@@ -28,6 +28,8 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
     implementation 'androidx.core:core-ktx:1.0.0-beta01'
+    implementation "io.reactivex.rxjava2:rxkotlin:2.2.0"
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
